[omnibox] Move RCD filter

Work in progress, to be updated later

Bug: 808925
Change-Id: I4105a3500b042ed86f4bb1dfa73041bf44c6c5c5